--- a/Css/try.css
+++ b/Css/try.css
@@ -1,7 +1,13 @@
-html, body {
+@font-face {
+    font-family: "Mont DEMOlight";
+    src: url("../Font/mont/Mont-ExtraLightDEMO.otf") format("opentype");
+}
+
+body, html {
     width: 100%;
-    height: 100%;
-    background-color: #161616;
+    height: 100vh;
+    background-color: white;
+    scroll-behavior: smooth;
 }
 
 .conNavbar {
@@ -448,4 +454,110 @@ main {
     height: 15px;
     line-height: 35px;
     color: #212121;
+}
+
+.pContactMe {
+    font-family: Roboto;
+    color: #454343;
+    font-weight: bold;
+    font-size: 2.5rem;
+}
+
+.pAdd {
+    font-family: Roboto;
+    color: #595959;
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1.4em;
+}
+
+.pCell {
+    font-family: Roboto;
+    color: #212121;
+    font-weight: bold;
+    font-size: 2rem;
+    line-height: 1em;
+}
+
+.pCopy {
+    font-family: Roboto;
+    color: #212121;
+    font-weight: bold;
+    font-size: 0.9rem;
+    line-height: 1em;
+}
+
+.pFollow {
+    font-family: Roboto;
+    color: #ff8d00;
+    font-weight: bold;
+    font-size: 0.9rem;
+}
+
+.lblname {
+    font-family: muli;
+    font-size: 35px;
+    font-weight: bold;
+    color: white;
+}
+
+.lbldescription {
+    width: 70%;
+    color: #BDBDBD;
+    font-family: muli;
+    font-size: 18px;
+}
+
+.lblwelcome {
+    font-family: Mont DEMOlight;
+    font-weight: normal !important;
+    font-size: 55px;
+    width: 100%;
+    text-align: center;
+    color: #CFB53B;
+    background-color: transparent;
+    line-height: 50px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+}
+
+.maincontainer {
+    height: 100vh;
+    background: white;
+    padding: 0px;
+    margin: 0px;
+}
+
+#particles-js {
+    height: 100%;
+    z-index: -99999999;
+    display: flex;
+    justify-content: left;
+    align-items: center;
+    padding: 0px;
+    margin: 0px;
+    width: 100%;
+}
+
+.lbltitle {
+    width: 100%;
+    font-size: 20px;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.004);
+    text-rendering: optimizeLegibility !important;
+    -webkit-font-smoothing: antialiased !important;
+    color: #CFB53B;
+}
+
+.hr1 {
+    width: 40%;
+    border: 0;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+}
+
+.particles-js-canvas-el {
+    position: absolute;
+    padding: 0px;
+    margin: 0px;
 }
